[package]
name = "yew-utils"
version = "0.4.0"
authors = ["Robert Krahn <robert@kra.hn>"]
categories = ["wasm", "web-programming", "gui"]
edition = "2021"
exclude = ["*.bak", "DEV.org", ".dir-locals.el"]
homepage = "https://github.com/rksm/yew-utils"
keywords = ["wasm", "yew"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/yew-utils"
description = "Some batteries for the yew WebAssembly frontend framework."

[features]
default = []
yew-router = ["dep:yew-router"]
mui-css = []

[dependencies]
web-sys = { version = "0.3.57", features = ["HtmlSelectElement"] }
yew = "0.21"
yew-router = { version = "0.18", optional = true }

[dev-dependencies]
gloo-utils = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
